@@ -1,3 +1,7 @@
+2016-05-10 Albert Chu <chu11@llnl.gov>
+
+	* bmc-device/: Support --read-fru and --device-id option.
+
 2016-05-04 Albert Chu <chu11@llnl.gov>
 
 	* man/ipmi-fru.8.pre.in, man/bmc-device.8.pre.in: Minor fixes
